--- a/DummyLog4Net/DummyLog4Net.csproj
+++ b/DummyLog4Net/DummyLog4Net.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</ProjectGuid>
+    <ProjectGuid>{388A636E-A039-40A1-A0C3-ABAD897FCA5D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Merlion</RootNamespace>
-    <AssemblyName>Merlion</AssemblyName>
+    <RootNamespace>log4net</RootNamespace>
+    <AssemblyName>log4net</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -17,7 +18,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -26,35 +26,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ByteArrayComparer.cs" />
-    <Compile Include="Server\Application.cs" />
-    <Compile Include="Server\MerlionClient.cs" />
-    <Compile Include="Server\MerlionRoom.cs" />
-    <Compile Include="Server\ServerNode.cs" />
-    <Compile Include="Client\MerlionClient.cs" />
-    <Compile Include="Client\Protocol.cs" />
-    <Compile Include="MerlionException.cs" />
-    <Compile Include="Server\ApplicationServer.cs" />
-    <Compile Include="Server\ApplicationConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="Utils\" />
-    <Folder Include="Server\" />
-    <Folder Include="Client\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
 </Project>
