Server configuration now uses "base directory"

--- a/MerlionServer/app.config
+++ b/MerlionServer/app.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-        <add key="Log4NetConfigFile" value="" />
+        <add key="BaseDirectory" value="" />
+
+        <add key="Log4NetConfigFile" value="Log4Net.config" />
 
         <add key="EndpointAddress" value="0.0.0.0:16070" />
 
         <add key="MasterServerAddress" value="0.0.0.0:5000" />
-        <!--- <add key="MasterServerCertificate" value="/Users/tcpp/.config/Merlion/Cert.pfx" /> --> 
-        <add key="MasterServerCertificate" value="/Users/tcpp/.config/Merlion/Cert.crt" />
-        <add key="MasterServerPrivateKey" value="/Users/tcpp/.config/Merlion/Cert.key" />
+        <add key="MasterServerCertificate" value="Cert.crt" />
+        <add key="MasterServerPrivateKey" value="Cert.key" />
+        <add key="DisallowClientSideVersionSpecification" value="False" />
 
         <add key="BalancerConfigFilePath" value="" />
 
