--- a/MerlionServer/MerlionServer.csproj
+++ b/MerlionServer/MerlionServer.csproj
@@ -88,6 +88,10 @@
       <Project>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</Project>
       <Name>Merlion</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MerlionServerUtils\MerlionServerUtils.csproj">
+      <Project>{E12D56B3-2392-4AA1-AC3E-38363C141C6B}</Project>
+      <Name>MerlionServerUtils</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
