--- a/MerlionSimpleServer/MerlionSimpleServer.csproj
+++ b/MerlionSimpleServer/MerlionSimpleServer.csproj
@@ -17,7 +17,8 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
+    <Commandlineparameters>-Certificate /Users/tcpp/.config/Merlion/TestServer.p12</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -42,6 +43,10 @@
     <ProjectReference Include="..\Merlion\Merlion.csproj">
       <Project>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</Project>
       <Name>Merlion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MerlionServerUtils\MerlionServerUtils.csproj">
+      <Project>{E12D56B3-2392-4AA1-AC3E-38363C141C6B}</Project>
+      <Name>MerlionServerUtils</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
