--- a/MerlionServer/app.config
+++ b/MerlionServer/app.config
@@ -7,6 +7,7 @@
 
         <add key="EndpointAddress" value="0.0.0.0:16070" />
 
+        <add key="MasterName" value="Merlion Server" />
         <add key="MasterServerAddress" value="0.0.0.0:5000" />
         <add key="MasterServerCertificate" value="Cert.crt" />
         <add key="MasterServerPrivateKey" value="Cert.key" />
