Server name now defaults to the machine name

--- a/MerlionServer/app.config
+++ b/MerlionServer/app.config
@@ -7,7 +7,7 @@
 
         <add key="EndpointAddress" value="0.0.0.0:16070" />
 
-        <add key="MasterName" value="Merlion Server" />
+        <add key="MasterName" value="" />
         <add key="MasterServerAddress" value="0.0.0.0:5000" />
         <add key="MasterServerCertificate" value="Cert.crt" />
         <add key="MasterServerPrivateKey" value="Cert.key" />
@@ -20,7 +20,7 @@
         value="Merlion.Server.Web.BasicWebInterfaceAuthentication;UserName=hoge;Password=password" />
 
         <add key="DeployDirectory" value="" />
-        <add key="NodeName" value="Default" />
+        <add key="NodeName" value="" />
         <add key="ForwardLogToMaster" value="True" />
 
         <add key="UpstreamBufferSize" value="655360" />
