--- a/MerlionServer/MerlionServer.csproj
+++ b/MerlionServer/MerlionServer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -18,7 +18,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <Commandlineparameters>-Master</Commandlineparameters>
+    <Commandlineparameters>-n -ma 127.0.0.1:5000</Commandlineparameters>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -75,13 +75,14 @@
     <Compile Include="Utils\PipeStream.cs" />
     <Compile Include="Utils\StreamAsyncCopier.cs" />
     <Compile Include="NativeMasterServer.cs" />
-    <Compile Include="NativeNodeServer.cs" />
     <Compile Include="Utils\InvalidStream.cs" />
     <Compile Include="NativeServerInterop.cs" />
     <Compile Include="LogView.cs" />
     <Compile Include="LogStorages.cs" />
     <Compile Include="Utils\Deque.cs" />
     <Compile Include="Web\ServerInformation.cs" />
+    <Compile Include="NativeNodeServerManager.cs" />
+    <Compile Include="NativeNodeServer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
