--- a/MerCat/MerCat.csproj
+++ b/MerCat/MerCat.csproj
@@ -17,7 +17,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Commandlineparameters>-Address 127.0.0.1 -Stress -Concurrency 1 -Interval 100 -ChunkSize 65536</Commandlineparameters>
+    <Commandlineparameters>-a 127.0.0.1 -s</Commandlineparameters>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -31,10 +31,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Mono.Security" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StressTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
