--- a/MerlionClient/MerlionClient.csproj
+++ b/MerlionClient/MerlionClient.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</ProjectGuid>
+    <ProjectGuid>{0417807A-9A1E-4EA8-8D86-2E057B0CB9C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Merlion</RootNamespace>
-    <AssemblyName>Merlion</AssemblyName>
+    <AssemblyName>MerlionClient</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -18,7 +18,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -27,24 +26,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.3\lib\net20-full\log4net.dll</HintPath>
+    <Reference Include="WebSocket4Net">
+      <HintPath>..\packages\WebSocket4Net.0.10\lib\net20\WebSocket4Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ByteArrayComparer.cs" />
-    <Compile Include="MerlionException.cs" />
-    <Compile Include="Utils\HexEncoder.cs" />
+    <Compile Include="Client\MerlionClient.cs" />
+    <Compile Include="Client\Protocol.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Utils\" />
+    <ProjectReference Include="..\Merlion\Merlion.csproj">
+      <Project>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</Project>
+      <Name>Merlion</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
