--- a/MerlionFramework/MerlionFramework.csproj
+++ b/MerlionFramework/MerlionFramework.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FF79C716-3A97-4954-B941-1CED9FECD716}</ProjectGuid>
+    <ProjectGuid>{63038769-6F7D-48FA-BBB9-100B367B9FCC}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Merlion.Server.Test</RootNamespace>
-    <AssemblyName>MerlionServerTest</AssemblyName>
+    <RootNamespace>Merlion</RootNamespace>
+    <AssemblyName>MerlionFramework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,50 +29,29 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Ionic.Zip">
-      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
-    <Compile Include="TemporaryDirectory.cs" />
-    <Compile Include="TestUtils.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\Application.cs" />
+    <Compile Include="Server\ApplicationConfig.cs" />
+    <Compile Include="Server\ApplicationServer.cs" />
+    <Compile Include="Server\MerlionClient.cs" />
+    <Compile Include="Server\MerlionRoom.cs" />
+    <Compile Include="Server\ServerNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MerlionServer\MerlionServer.csproj">
-      <Project>{C2139D01-58D6-413B-96B4-9EB1E87EE454}</Project>
-      <Name>MerlionServer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MerEcho\MerEcho.csproj">
-      <Project>{2E12801E-78DB-4591-AA37-28625ED9D6B1}</Project>
-      <Name>MerEcho</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Merlion\Merlion.csproj">
       <Project>{0A861EAA-56F9-4200-B1FA-173E3B8AACB2}</Project>
       <Name>Merlion</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MerlionClient\MerlionClient.csproj">
-      <Project>{0417807A-9A1E-4EA8-8D86-2E057B0CB9C4}</Project>
-      <Name>MerlionClient</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MerlionFramework\MerlionFramework.csproj">
-      <Project>{63038769-6F7D-48FA-BBB9-100B367B9FCC}</Project>
-      <Name>MerlionFramework</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestCertificate.crt" />
-    <EmbeddedResource Include="Resources\TestCertificate.key" />
   </ItemGroup>
 </Project>
