Added WebSocket.cpp to CMakeList.txt

--- a/MerlionServerCore/CMakeLists.txt
+++ b/MerlionServerCore/CMakeLists.txt
@@ -28,6 +28,7 @@ Utils.cpp
 Packet.cpp
 Logging.cpp
 LikeMatcher.cpp
+WebSocket.cpp
 )
 add_library(MerlionServerCore SHARED ${SOURCE_FILES})
 target_link_libraries(MerlionServerCore ${LIB_LIST})
